--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "bluebird": "^2.9.27",
     "eventemitter2": "^0.4.14",
     "node-libs-browser": ">= 0.4.0 <=0.6.0",
-    "rethinkdb": "~2.3.3",
-    "ws": "^0.8.0"
+    "rethinkdb": "~2.3.3"
   },
   "devDependencies": {
+    "ws": "^0.8.0",
     "babel": "^5.5.6",
     "babel-core": "^5.5.6",
     "babel-eslint": "^4.0.5",
@@ -34,5 +34,8 @@
     "eslint-loader": "^1.0.0",
     "mocha": "^2.2.5",
     "webpack": "^1.9.10"
+  },
+  "peerDependencies": {
+    "ws": "^0.8.0"
   }
 }
